plang/testing/logs/false-incorrect/154/program154.p.p.out
Error at n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).:3:12 error: 
n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).
           ^
Error at n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).:3:43 error: 
n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).
                                          ^
Error at n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).:3:53 error: 
n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).
                                                    ^
Error at n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).:3:68 error: 
n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).
                                                                   ^