plang/testing/logs/false-incorrect/154/program154.p.p
l.

n7Z oJg5B :- (((u (xkv48 kKy pjli KHzj fbr); euaQ Fy2)), (hDhm zXBlp)).

zrcTH (L2Ws) pZH2H (jcm uiVUc qw M2tS) pj63b.


xl0 (t (ub H4u N LO ZEIHk)) p4bwf aEjI.

xUJz KvQf (JZ0v) :- gD42K TZa.
? iPqwc (tKkPO (pB45W (Vj) (qF (s1n (EmzJ) (R)) s (ufT (o4XzS UtB (FZc6) (dvgKF) Vp7z) (d w) (OZ) S6) (WCun1)) o (VWpS2)) YSYz (NQzIM)); eeHu (I), ((i6fpb (M) (o Mdy S kf12 (hzo UYK7 r (d (DhW) (Ds9E)))) (Y) (dFy))); yB81 (ZTB); eQZY (S) Q5; gMBlA RAuW bSEZm, aeOI (ITGTu) aqImp (m bBEl9 L (S0)); (mlvj (Q71SU) I (oP1K) zAjZ9).
